--- a/Doxygen documentation/latex/_print_8h.tex
+++ b/Doxygen documentation/latex/_print_8h.tex
@@ -27,6 +27,8 @@ void \mbox{\hyperlink{_print_8h_ad5deb4d6da93418db2c13080bae46bdc}{print\+Move\+
 \item 
 void \mbox{\hyperlink{_print_8h_aab849fdc6e864a042e075a698cb0a6b5}{print\+Score\+Name}} (int score, char $\ast$color\+Mode, int y, char player, char name\mbox{[}20\mbox{]})
 \item 
+void \mbox{\hyperlink{_print_8h_ae953d69c998a186cfa2f6a69aa15c09a}{print\+Score}} (int score, char $\ast$color\+Mode, int y, char player)
+\item 
 void \mbox{\hyperlink{_print_8h_a535d6e965412bba0c9f8b027d8160b60}{print\+Score\+PC}} (int score, char $\ast$color\+Mode, int y, char player)
 \item 
 void \mbox{\hyperlink{_print_8h_a1076c28ca965d7ebaa8a26c91488e457}{print\+Winner}} (char name\mbox{[}20\mbox{]})
@@ -48,7 +50,7 @@ void \mbox{\hyperlink{_print_8h_a8252c60e6e40b41712045f3f6ef50d95}{dude}} ()
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00373}{373}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Definition at line \mbox{\hyperlink{_print_8h_source_l00390}{390}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_a7163d93faf2f9bfaf60660fa60164095}\label{_print_8h_a7163d93faf2f9bfaf60660fa60164095}} 
 \index{Print.h@{Print.h}!printAvaiblePieces@{printAvaiblePieces}}
@@ -98,7 +100,7 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00125}{125}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00356}{356}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Definition at line \mbox{\hyperlink{_print_8h_source_l00373}{373}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_a2aa18c495cf17747e69b7fc8d45fe437}\label{_print_8h_a2aa18c495cf17747e69b7fc8d45fe437}} 
 \index{Print.h@{Print.h}!printMap@{printMap}}
@@ -158,7 +160,17 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00296}{296}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00365}{365}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Definition at line \mbox{\hyperlink{_print_8h_source_l00382}{382}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+
+\mbox{\Hypertarget{_print_8h_ae953d69c998a186cfa2f6a69aa15c09a}\label{_print_8h_ae953d69c998a186cfa2f6a69aa15c09a}} 
+\index{Print.h@{Print.h}!printScore@{printScore}}
+\index{printScore@{printScore}!Print.h@{Print.h}}
+\doxysubsubsection{\texorpdfstring{printScore()}{printScore()}}
+{\footnotesize\ttfamily void print\+Score (\begin{DoxyParamCaption}\item[{int}]{score,  }\item[{char $\ast$}]{color\+Mode,  }\item[{int}]{y,  }\item[{char}]{player }\end{DoxyParamCaption})}
+
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00330}{330}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_aab849fdc6e864a042e075a698cb0a6b5}\label{_print_8h_aab849fdc6e864a042e075a698cb0a6b5}} 
 \index{Print.h@{Print.h}!printScoreName@{printScoreName}}
@@ -178,7 +190,7 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00319}{319}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00330}{330}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Definition at line \mbox{\hyperlink{_print_8h_source_l00347}{347}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_af93aaa5be98af25bcbce45e2048fe1c5}\label{_print_8h_af93aaa5be98af25bcbce45e2048fe1c5}} 
 \index{Print.h@{Print.h}!printSModeOptions@{printSModeOptions}}
@@ -208,5 +220,5 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00090}{90}} of file \mbox{
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00347}{347}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Definition at line \mbox{\hyperlink{_print_8h_source_l00364}{364}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
