--- a/Doxygen documentation/latex/_print_8h_source.tex
+++ b/Doxygen documentation/latex/_print_8h_source.tex
@@ -330,10 +330,10 @@
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00327}00327     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}blue"{}}, 1);}
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00328}00328 \}}
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00329}00329 }
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00330}\mbox{\hyperlink{_print_8h_a535d6e965412bba0c9f8b027d8160b60}{00330}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_print_8h_a535d6e965412bba0c9f8b027d8160b60}{printScorePC}}(\textcolor{keywordtype}{int} score, \textcolor{keywordtype}{char} *colorMode, \textcolor{keywordtype}{int} y, \textcolor{keywordtype}{char} player)\{}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00330}\mbox{\hyperlink{_print_8h_ae953d69c998a186cfa2f6a69aa15c09a}{00330}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_print_8h_ae953d69c998a186cfa2f6a69aa15c09a}{printScore}}(\textcolor{keywordtype}{int} score, \textcolor{keywordtype}{char} *colorMode, \textcolor{keywordtype}{int} y, \textcolor{keywordtype}{char} player)\{}
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00331}00331     \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(100, y);}
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00332}00332     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(colorMode, 1);}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00333}00333     printf(\textcolor{stringliteral}{"{}SCORE PC: \%d"{}}, score);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00333}00333     printf(\textcolor{stringliteral}{"{}SCORE: \%d"{}}, score);}
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00334}00334     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}blue"{}}, 1);}
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00335}00335     \textcolor{comment}{/*gotoXY(100, y);}}
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00336}00336 \textcolor{comment}{    setcolorText(colorMode, 1);}}
@@ -347,34 +347,51 @@
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00344}00344 \textcolor{comment}{    setcolorText("{}blue"{}, 1);*/}}
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00345}00345 \}}
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00346}00346 }
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00347}\mbox{\hyperlink{_print_8h_a1076c28ca965d7ebaa8a26c91488e457}{00347}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_print_8h_a1076c28ca965d7ebaa8a26c91488e457}{printWinner}}(\textcolor{keywordtype}{char} name[20])\{}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00348}00348     system(\textcolor{stringliteral}{"{}cls"{}});}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00349}00349     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}green"{}}, 1);}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00350}00350     \mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{centerText}}(100);}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00351}00351     printf(\textcolor{stringliteral}{"{}THE WINNER IS \%s \(\backslash\)n"{}}, name);}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00352}00352     \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay}}(2.0); \textcolor{comment}{/*due . 0 secondi*/}}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00353}00353     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}white"{}}, 1);}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00354}00354 \}}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00355}00355 }
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00356}\mbox{\hyperlink{_print_8h_a9fbc1f7e744174b1dab9de2a2a923803}{00356}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_print_8h_a9fbc1f7e744174b1dab9de2a2a923803}{printLoser}}(\textcolor{keywordtype}{char} name[20])\{}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00357}00357     system(\textcolor{stringliteral}{"{}cls"{}});}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00358}00358     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}red"{}}, 1);}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00359}00359     \mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{centerText}}(100);}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00360}00360     printf(\textcolor{stringliteral}{"{}\%s LOOSE AGAINST PC"{}}, name);}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00361}00361     \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay}}(2.0);}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00362}00362     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}white"{}}, 1);}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00363}00363 \}}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00364}00364 }
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00365}\mbox{\hyperlink{_print_8h_a277aa4d6daf83c78553264a2483b009a}{00365}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_print_8h_a277aa4d6daf83c78553264a2483b009a}{printPareggio}}()\{}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00366}00366     system(\textcolor{stringliteral}{"{}cls"{}});}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00367}00367     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}yellow"{}}, 1);}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00368}00368     \mbox{\hyperlink{_print_8h_a5564a74283c7de4315aa6c31e3a18cd1}{printTitle}}(\textcolor{stringliteral}{"{}DRAW"{}});}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00369}00369     \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay}}(2.0);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00347}\mbox{\hyperlink{_print_8h_a535d6e965412bba0c9f8b027d8160b60}{00347}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_print_8h_a535d6e965412bba0c9f8b027d8160b60}{printScorePC}}(\textcolor{keywordtype}{int} score, \textcolor{keywordtype}{char} *colorMode, \textcolor{keywordtype}{int} y, \textcolor{keywordtype}{char} player)\{}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00348}00348     \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(100, y);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00349}00349     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(colorMode, 1);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00350}00350     printf(\textcolor{stringliteral}{"{}SCORE PC: \%d"{}}, score);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00351}00351     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}blue"{}}, 1);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00352}00352     \textcolor{comment}{/*gotoXY(100, y);}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00353}00353 \textcolor{comment}{    setcolorText(colorMode, 1);}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00354}00354 \textcolor{comment}{    if(player == '1')\{}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00355}00355 \textcolor{comment}{        printf("{}SCORE PLAYER 1: \%d"{}, score);}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00356}00356 \textcolor{comment}{    \} else if(player == '2')\{}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00357}00357 \textcolor{comment}{        printf("{}SCORE PLAYER 2: \%d"{}, score);}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00358}00358 \textcolor{comment}{    \} else \{}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00359}00359 \textcolor{comment}{        printf("{}SCORE PC: \%d"{}, score);}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00360}00360 \textcolor{comment}{    \}}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00361}00361 \textcolor{comment}{    setcolorText("{}blue"{}, 1);*/}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00362}00362 \}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00363}00363 }
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00364}\mbox{\hyperlink{_print_8h_a1076c28ca965d7ebaa8a26c91488e457}{00364}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_print_8h_a1076c28ca965d7ebaa8a26c91488e457}{printWinner}}(\textcolor{keywordtype}{char} name[20])\{}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00365}00365     system(\textcolor{stringliteral}{"{}cls"{}});}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00366}00366     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}green"{}}, 1);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00367}00367     \mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{centerText}}(100);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00368}00368     printf(\textcolor{stringliteral}{"{}THE WINNER IS \%s \(\backslash\)n"{}}, name);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00369}00369     \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay}}(2.0); \textcolor{comment}{/*due . 0 secondi*/}}
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00370}00370     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}white"{}}, 1);}
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00371}00371 \}}
 \DoxyCodeLine{\Hypertarget{_print_8h_source_l00372}00372 }
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00373}\mbox{\hyperlink{_print_8h_a8252c60e6e40b41712045f3f6ef50d95}{00373}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_print_8h_a8252c60e6e40b41712045f3f6ef50d95}{dude}}()\{}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00374}00374     printf(\textcolor{stringliteral}{"{}DUDE\(\backslash\)n"{}});}
-\DoxyCodeLine{\Hypertarget{_print_8h_source_l00375}00375 \}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00373}\mbox{\hyperlink{_print_8h_a9fbc1f7e744174b1dab9de2a2a923803}{00373}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_print_8h_a9fbc1f7e744174b1dab9de2a2a923803}{printLoser}}(\textcolor{keywordtype}{char} name[20])\{}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00374}00374     system(\textcolor{stringliteral}{"{}cls"{}});}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00375}00375     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}red"{}}, 1);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00376}00376     \mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{centerText}}(100);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00377}00377     printf(\textcolor{stringliteral}{"{}\%s LOOSE AGAINST PC"{}}, name);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00378}00378     \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay}}(2.0);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00379}00379     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}white"{}}, 1);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00380}00380 \}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00381}00381 }
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00382}\mbox{\hyperlink{_print_8h_a277aa4d6daf83c78553264a2483b009a}{00382}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_print_8h_a277aa4d6daf83c78553264a2483b009a}{printPareggio}}()\{}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00383}00383     system(\textcolor{stringliteral}{"{}cls"{}});}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00384}00384     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}yellow"{}}, 1);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00385}00385     \mbox{\hyperlink{_print_8h_a5564a74283c7de4315aa6c31e3a18cd1}{printTitle}}(\textcolor{stringliteral}{"{}DRAW"{}});}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00386}00386     \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay}}(2.0);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00387}00387     \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolorText}}(\textcolor{stringliteral}{"{}white"{}}, 1);}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00388}00388 \}}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00389}00389 }
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00390}\mbox{\hyperlink{_print_8h_a8252c60e6e40b41712045f3f6ef50d95}{00390}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_print_8h_a8252c60e6e40b41712045f3f6ef50d95}{dude}}()\{}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00391}00391     printf(\textcolor{stringliteral}{"{}DUDE\(\backslash\)n"{}});}
+\DoxyCodeLine{\Hypertarget{_print_8h_source_l00392}00392 \}}
 
 \end{DoxyCode}
