--- a/Doxygen documentation/latex/_print_8h.tex
+++ b/Doxygen documentation/latex/_print_8h.tex
@@ -4,54 +4,42 @@
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{_print_8h_a2aa18c495cf17747e69b7fc8d45fe437}{print\+Map}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]})
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out the map (Single\+Player) \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_a1dd3cf15452a5093ce71f8d9ec956e9c}{print\+Map\+Color}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$\mbox{\hyperlink{tryhard_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$color0, int center)
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out the map in different colors (Multiplayer) \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_a2875dfc0ecfe0639e759d9814d48f52e}{print\+Maps}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$\mbox{\hyperlink{tryhard_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{tryhard_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char $\ast$color0)
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out two maps at the same time in different colors (Multiplayer) \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_a9c20781191d0dadbbcea017aab19e83f}{print\+Map2}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]})
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out the map in two colors. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_a5564a74283c7de4315aa6c31e3a18cd1}{print\+Title}} (char $\ast$title)
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out a Title in the middle of the current line. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_ae5ced7d7e756c5e7cc57256ac6865aa3}{print\+Game\+Menu}} ()
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out the Main Game Menu. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_af93aaa5be98af25bcbce45e2048fe1c5}{print\+SMode\+Options}} ()
-\item 
+\begin{DoxyCompactList}\small\item\em Prits out the Single\+Player Game Menu. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_a7163d93faf2f9bfaf60660fa60164095}{print\+Avaible\+Pieces}} (int $\ast$pieces, int \mbox{\hyperlink{tryhard_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, char $\ast$color\+Mode, char $\ast$color\+Piece)
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out which pieces are avaible or not. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_ae77770b22209ba7e20e82bbe37cc2b25}{print\+Legenda\+Pieces}} (char $\ast$color\+Mode, char $\ast$color\+Piece)
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out the mini Legenda to match a number with each piece. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_a5c0024f7636f893e7c57e72c6f0e7f93}{print\+Legenda\+All\+Pieces}} (char $\ast$color\+Mode, char $\ast$color\+Piece)
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out the Full Legenda. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_ad5deb4d6da93418db2c13080bae46bdc}{print\+Move\+Menu}} (int x, int y, char $\ast$color\+Mode)
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out the Move Menu\+: how to move the piece. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_aab849fdc6e864a042e075a698cb0a6b5}{print\+Score\+Name}} (int score, char $\ast$color\+Mode, int y, char player, char name\mbox{[}20\mbox{]})
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out the player\textquotesingle{}s score. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_ae953d69c998a186cfa2f6a69aa15c09a}{print\+Score}} (int score, char $\ast$color\+Mode, int y, char player)
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out the player\textquotesingle{}s score. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_a535d6e965412bba0c9f8b027d8160b60}{print\+Score\+PC}} (int score, char $\ast$color\+Mode, int y, char player)
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out PC score. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_a1076c28ca965d7ebaa8a26c91488e457}{print\+Winner}} (char name\mbox{[}20\mbox{]})
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out Winner interface. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_a9fbc1f7e744174b1dab9de2a2a923803}{print\+Loser}} (char name\mbox{[}20\mbox{]})
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out Loser interface. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_print_8h_a277aa4d6daf83c78553264a2483b009a}{print\+Pareggio}} ()
-\item 
-void \mbox{\hyperlink{_print_8h_a8252c60e6e40b41712045f3f6ef50d95}{dude}} ()
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Prints out Winner interface. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Function Documentation}
-\mbox{\Hypertarget{_print_8h_a8252c60e6e40b41712045f3f6ef50d95}\label{_print_8h_a8252c60e6e40b41712045f3f6ef50d95}} 
-\index{Print.h@{Print.h}!dude@{dude}}
-\index{dude@{dude}!Print.h@{Print.h}}
-\doxysubsubsection{\texorpdfstring{dude()}{dude()}}
-{\footnotesize\ttfamily void dude (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
-
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00390}{390}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_a7163d93faf2f9bfaf60660fa60164095}\label{_print_8h_a7163d93faf2f9bfaf60660fa60164095}} 
 \index{Print.h@{Print.h}!printAvaiblePieces@{printAvaiblePieces}}
 \index{printAvaiblePieces@{printAvaiblePieces}!Print.h@{Print.h}}
@@ -60,7 +48,25 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00390}{390}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00109}{109}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out which pieces are avaible or not. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em pieces} & pointer to avaiblepieces array \\
+\hline
+\mbox{\texttt{ in}}  & {\em dim} & avaible array\textquotesingle{}s size \\
+\hline
+\mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
+\hline
+\mbox{\texttt{ in}}  & {\em color\+Piece} & piece color \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00162}{162}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_ae5ced7d7e756c5e7cc57256ac6865aa3}\label{_print_8h_ae5ced7d7e756c5e7cc57256ac6865aa3}} 
 \index{Print.h@{Print.h}!printGameMenu@{printGameMenu}}
@@ -70,7 +76,11 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00109}{109}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00096}{96}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out the Main Game Menu. 
+
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00138}{138}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_a5c0024f7636f893e7c57e72c6f0e7f93}\label{_print_8h_a5c0024f7636f893e7c57e72c6f0e7f93}} 
 \index{Print.h@{Print.h}!printLegendaAllPieces@{printLegendaAllPieces}}
@@ -80,7 +90,63 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00096}{96}} of file \mbox{
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00153}{153}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out the Full Legenda. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
+\hline
+\mbox{\texttt{ in}}  & {\em color\+Piece} & piece color \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{goto\+XY()}} 
+
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+
+\mbox{\hyperlink{_initializer_8h_a3c193f4a435c0a6e3c521047d5c56a6d}{init\+Map()}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_aa3b575340bab8f3bec25b8776faadb6e}{drawT}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a805a433c4b2d7b6fdf72b7a19e625740}{draw\+T1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a3ff0916b18bf28f7a3ecb6aa9f0ac9e5}{draw\+T2}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ab4e33293ecaad87886da645fceacb5c7}{draw\+T3}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a41d0e649c136de7512dd63649b48a323}{drawZ}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ae9c8aae39834ed2147cc508fbd65d6f5}{draw\+Z1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a3c6a275e0b3bec11b9e66eac47c6816f}{draw\+Z2}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a03e667be37f44af9ea5c05e1ebd6c2a9}{draw\+Z3}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a99e0c040ad6c9cf5007a873ceff4e390}{drawI}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ae2b07a02fd9fdb6f8ff7907736f0de89}{draw\+I1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ab230773ef3eb81dcdc7e9f531a43488a}{drawL}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a0fce015e695a1e8cd4a5cc534fdafc7a}{draw\+L1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ac9456f234576a39da9ba4168e41c20bb}{draw\+L2}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a266c5f3c4f76c89bc9bd1e543b88705c}{draw\+L3}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a8f2ed46cd55891a5926377152188b8ab}{draw\+Lr}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ada5d4f3503c3b5b06611e6a920d9e3e1}{draw\+Lr1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_aaf5822c80dd59f4bf05ec11eb017f952}{draw\+Lr2}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a2b3aa20da9bd5814a92c84337836e003}{draw\+Lr3}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a1f0f37fcbe16c992da82419f30c529e6}{drawO}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00239}{239}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_ae77770b22209ba7e20e82bbe37cc2b25}\label{_print_8h_ae77770b22209ba7e20e82bbe37cc2b25}} 
 \index{Print.h@{Print.h}!printLegendaPieces@{printLegendaPieces}}
@@ -90,7 +156,21 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00153}{153}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00125}{125}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out the mini Legenda to match a number with each piece. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
+\hline
+\mbox{\texttt{ in}}  & {\em color\+Piece} & piece color \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00184}{184}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_a9fbc1f7e744174b1dab9de2a2a923803}\label{_print_8h_a9fbc1f7e744174b1dab9de2a2a923803}} 
 \index{Print.h@{Print.h}!printLoser@{printLoser}}
@@ -100,7 +180,23 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00125}{125}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00373}{373}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out Loser interface. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em name} & player\textquotesingle{}s name \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+
+\mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{center\+Text()}} 
+
+\mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00489}{489}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_a2aa18c495cf17747e69b7fc8d45fe437}\label{_print_8h_a2aa18c495cf17747e69b7fc8d45fe437}} 
 \index{Print.h@{Print.h}!printMap@{printMap}}
@@ -110,7 +206,21 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00373}{373}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00001}{1}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out the map (Single\+Player) 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em map} & game map \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{center\+Text()}} 
+
+\mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta\+Righe()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00007}{7}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_a9c20781191d0dadbbcea017aab19e83f}\label{_print_8h_a9c20781191d0dadbbcea017aab19e83f}} 
 \index{Print.h@{Print.h}!printMap2@{printMap2}}
@@ -120,7 +230,21 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00001}{1}} of file \mbox{\
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00074}{74}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out the map in two colors. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em map} & game map \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{center\+Text()}} 
+
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00107}{107}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_a1dd3cf15452a5093ce71f8d9ec956e9c}\label{_print_8h_a1dd3cf15452a5093ce71f8d9ec956e9c}} 
 \index{Print.h@{Print.h}!printMapColor@{printMapColor}}
@@ -130,7 +254,29 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00074}{74}} of file \mbox{
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00018}{18}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out the map in different colors (Multiplayer) 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em map} & game map \\
+\hline
+\mbox{\texttt{ in}}  & {\em color1} & piece color \\
+\hline
+\mbox{\texttt{ in}}  & {\em color0} & map color \\
+\hline
+\mbox{\texttt{ in}}  & {\em center} & a value to set text position \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{center\+Text()}} 
+
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+
+\mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta\+Righe()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00034}{34}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_a2875dfc0ecfe0639e759d9814d48f52e}\label{_print_8h_a2875dfc0ecfe0639e759d9814d48f52e}} 
 \index{Print.h@{Print.h}!printMaps@{printMaps}}
@@ -140,7 +286,31 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00018}{18}} of file \mbox{
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00039}{39}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out two maps at the same time in different colors (Multiplayer) 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em map} & game map \\
+\hline
+\mbox{\texttt{ in}}  & {\em map1} & enemy\textquotesingle{}s game map \\
+\hline
+\mbox{\texttt{ in}}  & {\em color1} & piece color \\
+\hline
+\mbox{\texttt{ in}}  & {\em color2} & enemy\textquotesingle{}s piece color \\
+\hline
+\mbox{\texttt{ in}}  & {\em color0} & map color \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+
+\mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{goto\+XY()}} 
+
+\mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta\+Righe()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00066}{66}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_ad5deb4d6da93418db2c13080bae46bdc}\label{_print_8h_ad5deb4d6da93418db2c13080bae46bdc}} 
 \index{Print.h@{Print.h}!printMoveMenu@{printMoveMenu}}
@@ -150,7 +320,25 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00039}{39}} of file \mbox{
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00296}{296}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out the Move Menu\+: how to move the piece. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em x} & current x coord. \\
+\hline
+\mbox{\texttt{ in}}  & {\em y} & current y coord. \\
+\hline
+\mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+
+\mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{center\+Text()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00390}{390}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_a277aa4d6daf83c78553264a2483b009a}\label{_print_8h_a277aa4d6daf83c78553264a2483b009a}} 
 \index{Print.h@{Print.h}!printPareggio@{printPareggio}}
@@ -160,7 +348,18 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00296}{296}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00382}{382}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out Winner interface. 
+
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+
+\mbox{\hyperlink{_print_8h_a5564a74283c7de4315aa6c31e3a18cd1}{print\+Title()}} 
+
+\mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00504}{504}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_ae953d69c998a186cfa2f6a69aa15c09a}\label{_print_8h_ae953d69c998a186cfa2f6a69aa15c09a}} 
 \index{Print.h@{Print.h}!printScore@{printScore}}
@@ -170,7 +369,27 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00382}{382}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00330}{330}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out the player\textquotesingle{}s score. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em score} & current score \\
+\hline
+\mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
+\hline
+\mbox{\texttt{ in}}  & {\em y} & current y coord. \\
+\hline
+\mbox{\texttt{ in}}  & {\em player} & index \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+
+\mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{goto\+XY()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00443}{443}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_aab849fdc6e864a042e075a698cb0a6b5}\label{_print_8h_aab849fdc6e864a042e075a698cb0a6b5}} 
 \index{Print.h@{Print.h}!printScoreName@{printScoreName}}
@@ -180,7 +399,29 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00330}{330}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00319}{319}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out the player\textquotesingle{}s score. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em score} & current score \\
+\hline
+\mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
+\hline
+\mbox{\texttt{ in}}  & {\em y} & current y coord. \\
+\hline
+\mbox{\texttt{ in}}  & {\em player} & index \\
+\hline
+\mbox{\texttt{ in}}  & {\em name} & player\textquotesingle{}s name \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+
+\mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{goto\+XY()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00423}{423}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_a535d6e965412bba0c9f8b027d8160b60}\label{_print_8h_a535d6e965412bba0c9f8b027d8160b60}} 
 \index{Print.h@{Print.h}!printScorePC@{printScorePC}}
@@ -190,7 +431,27 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00319}{319}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00347}{347}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out PC score. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em score} & current score \\
+\hline
+\mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
+\hline
+\mbox{\texttt{ in}}  & {\em y} & current y coord. \\
+\hline
+\mbox{\texttt{ in}}  & {\em player} & index \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+
+\mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{goto\+XY()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00459}{459}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_af93aaa5be98af25bcbce45e2048fe1c5}\label{_print_8h_af93aaa5be98af25bcbce45e2048fe1c5}} 
 \index{Print.h@{Print.h}!printSModeOptions@{printSModeOptions}}
@@ -200,7 +461,11 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00347}{347}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00103}{103}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prits out the Single\+Player Game Menu. 
+
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00148}{148}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_a5564a74283c7de4315aa6c31e3a18cd1}\label{_print_8h_a5564a74283c7de4315aa6c31e3a18cd1}} 
 \index{Print.h@{Print.h}!printTitle@{printTitle}}
@@ -210,7 +475,21 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00103}{103}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00090}{90}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out a Title in the middle of the current line. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em title} & title name \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{center\+Text()}} 
+
+\mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta\+Righe()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00129}{129}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
 \mbox{\Hypertarget{_print_8h_a1076c28ca965d7ebaa8a26c91488e457}\label{_print_8h_a1076c28ca965d7ebaa8a26c91488e457}} 
 \index{Print.h@{Print.h}!printWinner@{printWinner}}
@@ -220,5 +499,21 @@ Definition at line \mbox{\hyperlink{_print_8h_source_l00090}{90}} of file \mbox{
 
 
 
-Definition at line \mbox{\hyperlink{_print_8h_source_l00364}{364}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
+Prints out Winner interface. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em name} & player\textquotesingle{}s name \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+
+\mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{center\+Text()}} 
+
+\mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_print_8h_source_l00473}{473}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
 
