--- a/Doxygen documentation/latex/_text_settings_8h.tex
+++ b/Doxygen documentation/latex/_text_settings_8h.tex
@@ -4,11 +4,11 @@
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{center\+Text}} (int n)
-\item 
+\begin{DoxyCompactList}\small\item\em Put the next text printing in the middle of the current line. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text}} (char $\ast$color, int bold)
-\item 
+\begin{DoxyCompactList}\small\item\em Set the text to a certain color (string -\/\texorpdfstring{$>$}{>} color) \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta\+Righe}} (int N)
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em \texorpdfstring{$<$}{<}Jumps to N new lines forward \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Function Documentation}
@@ -20,7 +20,16 @@ void \mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta
 
 
 
-Definition at line \mbox{\hyperlink{_text_settings_8h_source_l00001}{1}} of file \mbox{\hyperlink{_text_settings_8h_source}{Text\+Settings.\+h}}.
+Put the next text printing in the middle of the current line. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em n} & a value to set the text position \\
+\hline
+\end{DoxyParams}
+
+
+Definition at line \mbox{\hyperlink{_text_settings_8h_source_l00005}{5}} of file \mbox{\hyperlink{_text_settings_8h_source}{Text\+Settings.\+h}}.
 
 \mbox{\Hypertarget{_text_settings_8h_a0916589349f2d883bef905033b33278c}\label{_text_settings_8h_a0916589349f2d883bef905033b33278c}} 
 \index{TextSettings.h@{TextSettings.h}!saltaRighe@{saltaRighe}}
@@ -30,7 +39,16 @@ Definition at line \mbox{\hyperlink{_text_settings_8h_source_l00001}{1}} of file
 
 
 
-Definition at line \mbox{\hyperlink{_text_settings_8h_source_l00029}{29}} of file \mbox{\hyperlink{_text_settings_8h_source}{Text\+Settings.\+h}}.
+\texorpdfstring{$<$}{<}Jumps to N new lines forward 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em N} & number of new lines to do \\
+\hline
+\end{DoxyParams}
+
+
+Definition at line \mbox{\hyperlink{_text_settings_8h_source_l00042}{42}} of file \mbox{\hyperlink{_text_settings_8h_source}{Text\+Settings.\+h}}.
 
 \mbox{\Hypertarget{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}\label{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}} 
 \index{TextSettings.h@{TextSettings.h}!setcolorText@{setcolorText}}
@@ -40,5 +58,16 @@ Definition at line \mbox{\hyperlink{_text_settings_8h_source_l00029}{29}} of fil
 
 
 
-Definition at line \mbox{\hyperlink{_text_settings_8h_source_l00008}{8}} of file \mbox{\hyperlink{_text_settings_8h_source}{Text\+Settings.\+h}}.
+Set the text to a certain color (string -\/\texorpdfstring{$>$}{>} color) 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em color} & string color name \\
+\hline
+\mbox{\texttt{ in}}  & {\em bold} & text option \\
+\hline
+\end{DoxyParams}
+
+
+Definition at line \mbox{\hyperlink{_text_settings_8h_source_l00017}{17}} of file \mbox{\hyperlink{_text_settings_8h_source}{Text\+Settings.\+h}}.
 
