--- a/Doxygen documentation/latex/_text_settings_8h.tex
+++ b/Doxygen documentation/latex/_text_settings_8h.tex
@@ -8,7 +8,7 @@ void \mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{cente
 void \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text}} (char $\ast$color, int bold)
 \begin{DoxyCompactList}\small\item\em Set the text to a certain color (string -\/\texorpdfstring{$>$}{>} color) \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta\+Righe}} (int N)
-\begin{DoxyCompactList}\small\item\em \texorpdfstring{$<$}{<}Jumps to N new lines forward \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Jumps to N new lines forward. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Function Documentation}
@@ -39,7 +39,7 @@ Definition at line \mbox{\hyperlink{_text_settings_8h_source_l00005}{5}} of file
 
 
 
-\texorpdfstring{$<$}{<}Jumps to N new lines forward 
+Jumps to N new lines forward. 
 
 
 \begin{DoxyParams}[1]{Parameters}
