--- a/Doxygen documentation/latex/refman.tex
+++ b/Doxygen documentation/latex/refman.tex
@@ -192,15 +192,13 @@
 \input{_initializer_8h_source}
 \input{_logic_8h}
 \input{_logic_8h_source}
+\input{main_8c}
+\input{main_8c_source}
 \input{_print_8h}
 \input{_print_8h_source}
 \input{_r_e_a_d_m_e_8md}
 \input{_text_settings_8h}
 \input{_text_settings_8h_source}
-\input{trash_8c}
-\input{trash_8c_source}
-\input{tryhard_8c}
-\input{tryhard_8c_source}
 %--- End generated contents ---
 % Index
   \backmatter
