--- a/Doxygen documentation/latex/_cut_8h.tex
+++ b/Doxygen documentation/latex/_cut_8h.tex
@@ -9,9 +9,9 @@ void \mbox{\hyperlink{_cut_8h_a18a2aae538ddaae3f0e111969fd20111}{ask\+Name}} (ch
 \begin{DoxyCompactList}\small\item\em Asks to player 1 or 2 to type the name and stores it and then asks to confirm. \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{_cut_8h_ab35e175ef92b0a09d11eade80c803c15}{intro}} ()
 \begin{DoxyCompactList}\small\item\em Prints out the Main Game Menu and asks the user to choose an option. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{_cut_8h_ac6cf1cc8abe38959f3638c4b6d791e0d}{init\+Game}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int avaiblep\mbox{[}6\mbox{]}, int \mbox{\hyperlink{tryhard_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}})
+void \mbox{\hyperlink{_cut_8h_ac6cf1cc8abe38959f3638c4b6d791e0d}{init\+Game}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int avaiblep\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}})
 \begin{DoxyCompactList}\small\item\em Initialize a match in Single\+Player. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{_cut_8h_a3de115086c75040b94838386ba16902b}{init\+Game\+MP}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int avaible\+MP\mbox{[}6\mbox{]}, int \mbox{\hyperlink{tryhard_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}})
+void \mbox{\hyperlink{_cut_8h_a3de115086c75040b94838386ba16902b}{init\+Game\+MP}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int avaible\+MP\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}})
 \begin{DoxyCompactList}\small\item\em Initialize a match in Multi\+Player. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_cut_8h_ac60705307c9228dac45d51d603e9fb77}{init\+Score}} (int $\ast$score)
 \begin{DoxyCompactList}\small\item\em Initialize the score of a match. \end{DoxyCompactList}\item 
@@ -23,15 +23,15 @@ void \mbox{\hyperlink{_cut_8h_afad99cae6255fb630bef1ba9a484af9f}{intro\+MPDynami
 \begin{DoxyCompactList}\small\item\em Prints out the Multi\+Player (1 vs 1) interface while the player 1 or 2 is moving the piece inside the map. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_cut_8h_af90f106fad12831a2806a540acc4bc91}{intro\+MPDynamic\+PC}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color\+Piece, char $\ast$color\+Mode, int score, int center, char player)
 \begin{DoxyCompactList}\small\item\em Prints out the Multi\+Player (1 vs PC) interface while the player or PC is moving the piece inside the map. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{_cut_8h_a5486ee999c7c672bd64802a3311a5e28}{intro\+MP2\+PC}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color\+Mode, int $\ast$score, int $\ast$score1, char $\ast$\mbox{\hyperlink{tryhard_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{tryhard_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char name\mbox{[}20\mbox{]})
+void \mbox{\hyperlink{_cut_8h_a5486ee999c7c672bd64802a3311a5e28}{intro\+MP2\+PC}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color\+Mode, int $\ast$score, int $\ast$score1, char $\ast$\mbox{\hyperlink{main_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{main_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char name\mbox{[}20\mbox{]})
 \begin{DoxyCompactList}\small\item\em Prints out the Multi\+Player (1 vs PC) interface, updates the scores and, if occurs, inverts the enemy\textquotesingle{}s rows. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{_cut_8h_ad013642412c359a29bc8a25d9628af4f}{intro\+MP2}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color\+Mode, int $\ast$score, int $\ast$score1, char $\ast$\mbox{\hyperlink{tryhard_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{tryhard_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char name1\mbox{[}20\mbox{]}, char name2\mbox{[}20\mbox{]})
+void \mbox{\hyperlink{_cut_8h_ad013642412c359a29bc8a25d9628af4f}{intro\+MP2}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color\+Mode, int $\ast$score, int $\ast$score1, char $\ast$\mbox{\hyperlink{main_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{main_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char name1\mbox{[}20\mbox{]}, char name2\mbox{[}20\mbox{]})
 \begin{DoxyCompactList}\small\item\em Prints out the Multi\+Player (1 vs 1) interface, updates the scores and, if occurs, inverts the enemy\textquotesingle{}s rows. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_cut_8h_ad9877321139162ae1207fd239f48ea43}{update\+Av\+Pieces}} (int avaiblep\mbox{[}6\mbox{]}, int selected\+SM, int drawn)
 \begin{DoxyCompactList}\small\item\em When a piece could not be drawn, this function stores back the amout (decreased) to its original value. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{_cut_8h_a31d08c0c40d8f48175b75e48f8412c8b}{select\+Process}} (int avaiblep\mbox{[}6\mbox{]}, int \mbox{\hyperlink{tryhard_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$selected\+SM, int $\ast$rotation, int $\ast$drawn, int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, char $\ast$color\+Mode, char $\ast$color\+Piece)
+void \mbox{\hyperlink{_cut_8h_a31d08c0c40d8f48175b75e48f8412c8b}{select\+Process}} (int avaiblep\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$selected\+SM, int $\ast$rotation, int $\ast$drawn, int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, char $\ast$color\+Mode, char $\ast$color\+Piece)
 \begin{DoxyCompactList}\small\item\em Selects a piece (tetramino), its rotation and updates avaible pieces. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{_cut_8h_ae1436a9803c69c5bd7b6ff9355bed613}{select\+Process\+PC}} (int avaiblep\mbox{[}6\mbox{]}, int \mbox{\hyperlink{tryhard_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$selected\+SM, int $\ast$rotation, int $\ast$drawn, int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, char $\ast$color\+Mode, char $\ast$color\+Piece)
+void \mbox{\hyperlink{_cut_8h_ae1436a9803c69c5bd7b6ff9355bed613}{select\+Process\+PC}} (int avaiblep\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$selected\+SM, int $\ast$rotation, int $\ast$drawn, int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, char $\ast$color\+Mode, char $\ast$color\+Piece)
 \begin{DoxyCompactList}\small\item\em Select randomly a piece (tetramino) and its rotation, then updates avaible pieces (1 vs PC) \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{_cut_8h_a9cb7b2d3ea20c422a23e44936eb8e875}{avoid\+Pieces}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int sy, int selected, int rotation)
 \begin{DoxyCompactList}\small\item\em Checks if the selected piece can move any further to any direction. \end{DoxyCompactList}\item 
@@ -47,9 +47,9 @@ int \mbox{\hyperlink{_cut_8h_a1d4d532ae9ededc1d84ef89e8fc3f992}{move\+Piece}} (i
 \begin{DoxyCompactList}\small\item\em Move the selected piece inside the map (Single\+Player) \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{_cut_8h_af3f86220a64193d10c7eb528f3ab64ea}{move\+Piece\+MP}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map\+Enemy\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, int selected\+MP, int rotation, int $\ast$released, int $\ast$score, char $\ast$color\+Mode, char $\ast$color\+Piece, int center, char player, char name\mbox{[}20\mbox{]})
 \begin{DoxyCompactList}\small\item\em Move the selected piece inside the map (Multi\+Player) \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{_cut_8h_ae0a29bd1d44e72663fe0c6f9ec04bc6d}{game\+One\+VSOne}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, int $\ast$score, int $\ast$score1, int $\ast$drawn, int $\ast$drawn1, int $\ast$rotation, int $\ast$rotation1, int $\ast$released, int $\ast$released1, int $\ast$selected\+SM, int $\ast$selected\+MP, int avaiblep\+MP\mbox{[}6\mbox{]}, int \mbox{\hyperlink{tryhard_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$won, int $\ast$won1, int $\ast$winning, int $\ast$winning1, char $\ast$color\+Mode, char $\ast$\mbox{\hyperlink{tryhard_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{tryhard_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char name1\mbox{[}20\mbox{]}, char name2\mbox{[}20\mbox{]})
+void \mbox{\hyperlink{_cut_8h_ae0a29bd1d44e72663fe0c6f9ec04bc6d}{game\+One\+VSOne}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, int $\ast$score, int $\ast$score1, int $\ast$drawn, int $\ast$drawn1, int $\ast$rotation, int $\ast$rotation1, int $\ast$released, int $\ast$released1, int $\ast$selected\+SM, int $\ast$selected\+MP, int avaiblep\+MP\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$won, int $\ast$won1, int $\ast$winning, int $\ast$winning1, char $\ast$color\+Mode, char $\ast$\mbox{\hyperlink{main_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{main_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char name1\mbox{[}20\mbox{]}, char name2\mbox{[}20\mbox{]})
 \begin{DoxyCompactList}\small\item\em Move the selected piece inside the map (Multi\+Player) \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{_cut_8h_aceee05f2d5cc88b14ebf0fc4f714b8d3}{game\+One\+VSPC}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, int $\ast$score, int $\ast$score1, int $\ast$drawn, int $\ast$drawn1, int $\ast$rotation, int $\ast$rotation1, int $\ast$released, int $\ast$released1, int $\ast$selected\+SM, int $\ast$selected\+MP, int avaiblep\+MP\mbox{[}6\mbox{]}, int \mbox{\hyperlink{tryhard_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$won, int $\ast$won1, int $\ast$winning, int $\ast$winning1, char $\ast$color\+Mode, char $\ast$\mbox{\hyperlink{tryhard_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{tryhard_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char name\mbox{[}20\mbox{]})
+void \mbox{\hyperlink{_cut_8h_aceee05f2d5cc88b14ebf0fc4f714b8d3}{game\+One\+VSPC}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, int $\ast$score, int $\ast$score1, int $\ast$drawn, int $\ast$drawn1, int $\ast$rotation, int $\ast$rotation1, int $\ast$released, int $\ast$released1, int $\ast$selected\+SM, int $\ast$selected\+MP, int avaiblep\+MP\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$won, int $\ast$won1, int $\ast$winning, int $\ast$winning1, char $\ast$color\+Mode, char $\ast$\mbox{\hyperlink{main_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{main_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char name\mbox{[}20\mbox{]})
 \begin{DoxyCompactList}\small\item\em Move the selected piece inside the map (Multi\+Player) \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
@@ -66,7 +66,7 @@ Asks to player 1 or 2 to type the name and stores it and then asks to confirm.
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em name} & array of 20 chars \\
+\mbox{\texttt{ out}}  & {\em name} & array of 20 chars \\
 \hline
 \mbox{\texttt{ in}}  & {\em n} & index\+: player1 or player2 \\
 \hline
@@ -118,7 +118,7 @@ Make the piece fall until the bottom of the map or the before colliding with ano
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em map} & game map \\
+\mbox{\texttt{ out}}  & {\em map} & game map \\
 \hline
 \mbox{\texttt{ in}}  & {\em x} & map x coord. \\
 \hline
@@ -130,7 +130,7 @@ Make the piece fall until the bottom of the map or the before colliding with ano
 \hline
 \mbox{\texttt{ in}}  & {\em rotation} & piece rotation \\
 \hline
-\mbox{\texttt{ in}}  & {\em score} & current score \\
+\mbox{\texttt{ out}}  & {\em score} & current score \\
 \hline
 \end{DoxyParams}
 \begin{DoxySeeAlso}{See also}
@@ -160,9 +160,9 @@ Make the piece fall until the bottom of the map or the before colliding with ano
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em map} & game map \\
+\mbox{\texttt{ out}}  & {\em map} & game map \\
 \hline
-\mbox{\texttt{ in}}  & {\em map\+Enemy} & enemy\textquotesingle{}s game map \\
+\mbox{\texttt{ out}}  & {\em map\+Enemy} & enemy\textquotesingle{}s game map \\
 \hline
 \mbox{\texttt{ in}}  & {\em x} & map x coord. \\
 \hline
@@ -174,7 +174,7 @@ Make the piece fall until the bottom of the map or the before colliding with ano
 \hline
 \mbox{\texttt{ in}}  & {\em rotation} & piece rotation \\
 \hline
-\mbox{\texttt{ in}}  & {\em score} & current score \\
+\mbox{\texttt{ out}}  & {\em score} & current score \\
 \hline
 \mbox{\texttt{ in}}  & {\em color\+Piece} & map color (the one who is moving the piece) \\
 \hline
@@ -218,45 +218,45 @@ Move the selected piece inside the map (Multi\+Player)
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em map} & player1 game map \\
+\mbox{\texttt{ out}}  & {\em map} & player1 game map \\
 \hline
-\mbox{\texttt{ in}}  & {\em map1} & player2 game map \\
+\mbox{\texttt{ out}}  & {\em map1} & player2 game map \\
 \hline
 \mbox{\texttt{ in}}  & {\em x} & map x coord. \\
 \hline
 \mbox{\texttt{ in}}  & {\em y} & map y coord. \\
 \hline
-\mbox{\texttt{ in}}  & {\em score} & player1 current score \\
+\mbox{\texttt{ out}}  & {\em score} & player1 current score \\
 \hline
-\mbox{\texttt{ in}}  & {\em score1} & player2 current score \\
+\mbox{\texttt{ out}}  & {\em score1} & player2 current score \\
 \hline
-\mbox{\texttt{ in}}  & {\em drawn} & player1 current score \\
+\mbox{\texttt{ out}}  & {\em drawn} & player1 current score \\
 \hline
-\mbox{\texttt{ in}}  & {\em drawn1} & player2 current score \\
+\mbox{\texttt{ out}}  & {\em drawn1} & player2 current score \\
 \hline
-\mbox{\texttt{ in}}  & {\em rotation} & player1 piece rotation \\
+\mbox{\texttt{ out}}  & {\em rotation} & player1 piece rotation \\
 \hline
-\mbox{\texttt{ in}}  & {\em rotation1} & player2 piece rotation \\
+\mbox{\texttt{ out}}  & {\em rotation1} & player2 piece rotation \\
 \hline
-\mbox{\texttt{ in}}  & {\em released} & if player1 piece is released or not \\
+\mbox{\texttt{ out}}  & {\em released} & if player1 piece is released or not \\
 \hline
-\mbox{\texttt{ in}}  & {\em released1} & if player2 piece is released or not \\
+\mbox{\texttt{ out}}  & {\em released1} & if player2 piece is released or not \\
 \hline
-\mbox{\texttt{ in}}  & {\em selected\+SM} & player1 selected piece \\
+\mbox{\texttt{ out}}  & {\em selected\+SM} & player1 selected piece \\
 \hline
-\mbox{\texttt{ in}}  & {\em selected\+MP} & player2 selected piece \\
+\mbox{\texttt{ out}}  & {\em selected\+MP} & player2 selected piece \\
 \hline
-\mbox{\texttt{ in}}  & {\em avaible\+MP} & avaible pieces (shared) \\
+\mbox{\texttt{ out}}  & {\em avaible\+MP} & avaible pieces (shared) \\
 \hline
 \mbox{\texttt{ in}}  & {\em dim} & avaible\+MP array\textquotesingle{}s size \\
 \hline
-\mbox{\texttt{ in}}  & {\em won} & if player1 has finished the pieces avaible \\
+\mbox{\texttt{ out}}  & {\em won} & if player1 has finished the pieces avaible \\
 \hline
-\mbox{\texttt{ in}}  & {\em won1} & if player2 has finished the pieces avaible \\
+\mbox{\texttt{ out}}  & {\em won1} & if player2 has finished the pieces avaible \\
 \hline
-\mbox{\texttt{ in}}  & {\em winning} & if player1 has moved the piece uncorrectly \\
+\mbox{\texttt{ out}}  & {\em winning} & if player1 has moved the piece uncorrectly \\
 \hline
-\mbox{\texttt{ in}}  & {\em winning1} & if player2 has moved the piece uncorrectly \\
+\mbox{\texttt{ out}}  & {\em winning1} & if player2 has moved the piece uncorrectly \\
 \hline
 \mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
 \hline
@@ -284,7 +284,7 @@ Move the selected piece inside the map (Multi\+Player)
 \end{DoxySeeAlso}
 
 
-Definition at line \mbox{\hyperlink{_cut_8h_source_l01040}{1040}} of file \mbox{\hyperlink{_cut_8h_source}{Cut.\+h}}.
+Definition at line \mbox{\hyperlink{_cut_8h_source_l01038}{1038}} of file \mbox{\hyperlink{_cut_8h_source}{Cut.\+h}}.
 
 \mbox{\Hypertarget{_cut_8h_aceee05f2d5cc88b14ebf0fc4f714b8d3}\label{_cut_8h_aceee05f2d5cc88b14ebf0fc4f714b8d3}} 
 \index{Cut.h@{Cut.h}!gameOneVSPC@{gameOneVSPC}}
@@ -298,45 +298,45 @@ Move the selected piece inside the map (Multi\+Player)
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em map} & player1 game map \\
+\mbox{\texttt{ out}}  & {\em map} & player1 game map \\
 \hline
-\mbox{\texttt{ in}}  & {\em map1} & player2 game map \\
+\mbox{\texttt{ out}}  & {\em map1} & player2 game map \\
 \hline
 \mbox{\texttt{ in}}  & {\em x} & map x coord. \\
 \hline
 \mbox{\texttt{ in}}  & {\em y} & map y coord. \\
 \hline
-\mbox{\texttt{ in}}  & {\em score} & player1 current score \\
+\mbox{\texttt{ out}}  & {\em score} & player1 current score \\
 \hline
-\mbox{\texttt{ in}}  & {\em score1} & player2 current score \\
+\mbox{\texttt{ out}}  & {\em score1} & player2 current score \\
 \hline
-\mbox{\texttt{ in}}  & {\em drawn} & player1 current score \\
+\mbox{\texttt{ out}}  & {\em drawn} & player1 current score \\
 \hline
-\mbox{\texttt{ in}}  & {\em drawn1} & player2 current score \\
+\mbox{\texttt{ out}}  & {\em drawn1} & player2 current score \\
 \hline
-\mbox{\texttt{ in}}  & {\em rotation} & player1 piece rotation \\
+\mbox{\texttt{ out}}  & {\em rotation} & player1 piece rotation \\
 \hline
-\mbox{\texttt{ in}}  & {\em rotation1} & player2 piece rotation \\
+\mbox{\texttt{ out}}  & {\em rotation1} & player2 piece rotation \\
 \hline
-\mbox{\texttt{ in}}  & {\em released} & if player1 piece is released or not \\
+\mbox{\texttt{ out}}  & {\em released} & if player1 piece is released or not \\
 \hline
-\mbox{\texttt{ in}}  & {\em released1} & if player2 piece is released or not \\
+\mbox{\texttt{ out}}  & {\em released1} & if player2 piece is released or not \\
 \hline
-\mbox{\texttt{ in}}  & {\em selected\+SM} & player1 selected piece \\
+\mbox{\texttt{ out}}  & {\em selected\+SM} & player1 selected piece \\
 \hline
-\mbox{\texttt{ in}}  & {\em selected\+MP} & player2 selected piece \\
+\mbox{\texttt{ out}}  & {\em selected\+MP} & player2 selected piece \\
 \hline
-\mbox{\texttt{ in}}  & {\em avaible\+MP} & avaible pieces (shared) \\
+\mbox{\texttt{ out}}  & {\em avaible\+MP} & avaible pieces (shared) \\
 \hline
 \mbox{\texttt{ in}}  & {\em dim} & avaible\+MP array\textquotesingle{}s size \\
 \hline
-\mbox{\texttt{ in}}  & {\em won} & if player1 has finished the pieces avaible \\
+\mbox{\texttt{ out}}  & {\em won} & if player1 has finished the pieces avaible \\
 \hline
-\mbox{\texttt{ in}}  & {\em won1} & if player2 has finished the pieces avaible \\
+\mbox{\texttt{ out}}  & {\em won1} & if player2 has finished the pieces avaible \\
 \hline
-\mbox{\texttt{ in}}  & {\em winning} & if player1 has moved the piece uncorrectly \\
+\mbox{\texttt{ out}}  & {\em winning} & if player1 has moved the piece uncorrectly \\
 \hline
-\mbox{\texttt{ in}}  & {\em winning1} & if player2 has moved the piece uncorrectly \\
+\mbox{\texttt{ out}}  & {\em winning1} & if player2 has moved the piece uncorrectly \\
 \hline
 \mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
 \hline
@@ -366,7 +366,7 @@ Move the selected piece inside the map (Multi\+Player)
 \end{DoxySeeAlso}
 
 
-Definition at line \mbox{\hyperlink{_cut_8h_source_l01120}{1120}} of file \mbox{\hyperlink{_cut_8h_source}{Cut.\+h}}.
+Definition at line \mbox{\hyperlink{_cut_8h_source_l01118}{1118}} of file \mbox{\hyperlink{_cut_8h_source}{Cut.\+h}}.
 
 \mbox{\Hypertarget{_cut_8h_a76773923e027d0b15c74e290a4fe6835}\label{_cut_8h_a76773923e027d0b15c74e290a4fe6835}} 
 \index{Cut.h@{Cut.h}!getLastCoords@{getLastCoords}}
@@ -430,9 +430,9 @@ Initialize a match in Single\+Player.
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em map} & game map \\
+\mbox{\texttt{ out}}  & {\em map} & game map \\
 \hline
-\mbox{\texttt{ in}}  & {\em avaiblep} & avaible pieces \\
+\mbox{\texttt{ out}}  & {\em avaiblep} & avaible pieces \\
 \hline
 \mbox{\texttt{ in}}  & {\em dim} & avaiblep array\textquotesingle{}s size \\
 \hline
@@ -458,11 +458,11 @@ Initialize a match in Multi\+Player.
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em map} & game map of player1 \\
+\mbox{\texttt{ out}}  & {\em map} & game map of player1 \\
 \hline
-\mbox{\texttt{ in}}  & {\em map1} & game map of player2 \\
+\mbox{\texttt{ out}}  & {\em map1} & game map of player2 \\
 \hline
-\mbox{\texttt{ in}}  & {\em avaiblep} & avaible pieces (shared) \\
+\mbox{\texttt{ out}}  & {\em avaiblep} & avaible pieces (shared) \\
 \hline
 \mbox{\texttt{ in}}  & {\em dim} & avaiblep array\textquotesingle{}s dimension \\
 \hline
@@ -488,7 +488,7 @@ Initialize the score of a match.
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em score} & score of player 1 or player 2 or PC \\
+\mbox{\texttt{ out}}  & {\em score} & score of player 1 or player 2 or PC \\
 \hline
 \end{DoxyParams}
 
@@ -505,11 +505,9 @@ Definition at line \mbox{\hyperlink{_cut_8h_source_l00091}{91}} of file \mbox{\h
 
 Prints out the Main Game Menu and asks the user to choose an option. 
 
-
-\begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ out}}  & {\em opt} & game option which the user has selected \\
-\hline
-\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+opt\+: game option which the user has selected 
+\end{DoxyReturn}
 
 
 Definition at line \mbox{\hyperlink{_cut_8h_source_l00044}{44}} of file \mbox{\hyperlink{_cut_8h_source}{Cut.\+h}}.
@@ -526,15 +524,15 @@ Prints out the Multi\+Player (1 vs 1) interface, updates the scores and, if occu
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em map} & player1 game map \\
+\mbox{\texttt{ out}}  & {\em map} & player1 game map \\
 \hline
-\mbox{\texttt{ in}}  & {\em map1} & player2 game map \\
+\mbox{\texttt{ out}}  & {\em map1} & player2 game map \\
 \hline
 \mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
 \hline
-\mbox{\texttt{ in}}  & {\em score} & player1 current score \\
+\mbox{\texttt{ out}}  & {\em score} & player1 current score \\
 \hline
-\mbox{\texttt{ in}}  & {\em score1} & player2 current score \\
+\mbox{\texttt{ out}}  & {\em score1} & player2 current score \\
 \hline
 \mbox{\texttt{ in}}  & {\em color1} & player1 map color \\
 \hline
@@ -576,15 +574,15 @@ Prints out the Multi\+Player (1 vs PC) interface, updates the scores and, if occ
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em map} & player\textquotesingle{}s game map \\
+\mbox{\texttt{ out}}  & {\em map} & player\textquotesingle{}s game map \\
 \hline
-\mbox{\texttt{ in}}  & {\em map1} & PC\textquotesingle{}s game map \\
+\mbox{\texttt{ out}}  & {\em map1} & PC\textquotesingle{}s game map \\
 \hline
 \mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
 \hline
-\mbox{\texttt{ in}}  & {\em score} & player\textquotesingle{}s current score \\
+\mbox{\texttt{ out}}  & {\em score} & player\textquotesingle{}s current score \\
 \hline
-\mbox{\texttt{ in}}  & {\em score1} & PC\textquotesingle{}s current score \\
+\mbox{\texttt{ out}}  & {\em score1} & PC\textquotesingle{}s current score \\
 \hline
 \mbox{\texttt{ in}}  & {\em color1} & player\textquotesingle{}s map color \\
 \hline
@@ -718,9 +716,10 @@ Prints out the Single\+Player Game Menu and asks the user to choose an option.
 \hline
 \mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
 \hline
-\mbox{\texttt{ out}}  & {\em singleopt} & option selected \\
-\hline
 \end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+singleopt\+: option selected 
+\end{DoxyReturn}
 \begin{DoxySeeAlso}{See also}
 \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
 
@@ -786,7 +785,7 @@ Move the selected piece inside the map (Single\+Player)
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em map} & game map \\
+\mbox{\texttt{ out}}  & {\em map} & game map \\
 \hline
 \mbox{\texttt{ in}}  & {\em x} & map x coord. \\
 \hline
@@ -794,17 +793,16 @@ Move the selected piece inside the map (Single\+Player)
 \hline
 \mbox{\texttt{ in}}  & {\em selected\+SM} & selected piece \\
 \hline
-\mbox{\texttt{ in}}  & {\em rotation} & piece rotation \\
+\mbox{\texttt{ out}}  & {\em rotation} & piece rotation \\
 \hline
-\mbox{\texttt{ in}}  & {\em released} & if the piece is released or not \\
+\mbox{\texttt{ out}}  & {\em released} & if the piece is released or not \\
 \hline
-\mbox{\texttt{ in}}  & {\em score} & current score \\
-\hline
-\mbox{\texttt{ out}}  & {\em 0} & if the piece wasn\textquotesingle{}t correctly moved \\
-\hline
-\mbox{\texttt{ out}}  & {\em 1} & if the piece was correctly moved \\
+\mbox{\texttt{ out}}  & {\em score} & current score \\
 \hline
 \end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+0\+: if the piece wasn\textquotesingle{}t correctly moved, 1\+: if the piece was correctly moved 
+\end{DoxyReturn}
 \begin{DoxySeeAlso}{See also}
 \mbox{\hyperlink{_cut_8h_a1515458ebe31caafde5c67c95e8cb9ff}{intro\+SDynamic()}} 
 
@@ -836,7 +834,7 @@ Move the selected piece inside the map (Single\+Player)
 \end{DoxySeeAlso}
 
 
-Definition at line \mbox{\hyperlink{_cut_8h_source_l00736}{736}} of file \mbox{\hyperlink{_cut_8h_source}{Cut.\+h}}.
+Definition at line \mbox{\hyperlink{_cut_8h_source_l00735}{735}} of file \mbox{\hyperlink{_cut_8h_source}{Cut.\+h}}.
 
 \mbox{\Hypertarget{_cut_8h_af3f86220a64193d10c7eb528f3ab64ea}\label{_cut_8h_af3f86220a64193d10c7eb528f3ab64ea}} 
 \index{Cut.h@{Cut.h}!movePieceMP@{movePieceMP}}
@@ -850,9 +848,9 @@ Move the selected piece inside the map (Multi\+Player)
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em map} & game map \\
+\mbox{\texttt{ out}}  & {\em map} & game map \\
 \hline
-\mbox{\texttt{ in}}  & {\em map\+Enemy} & enemy\textquotesingle{}s game map \\
+\mbox{\texttt{ out}}  & {\em map\+Enemy} & enemy\textquotesingle{}s game map \\
 \hline
 \mbox{\texttt{ in}}  & {\em x} & map x coord. \\
 \hline
@@ -860,11 +858,11 @@ Move the selected piece inside the map (Multi\+Player)
 \hline
 \mbox{\texttt{ in}}  & {\em selected\+SM} & selected piece \\
 \hline
-\mbox{\texttt{ in}}  & {\em rotation} & piece rotation \\
+\mbox{\texttt{ out}}  & {\em rotation} & piece rotation \\
 \hline
-\mbox{\texttt{ in}}  & {\em released} & if the piece is released or not \\
+\mbox{\texttt{ out}}  & {\em released} & if the piece is released or not \\
 \hline
-\mbox{\texttt{ in}}  & {\em score} & current score \\
+\mbox{\texttt{ out}}  & {\em score} & current score \\
 \hline
 \mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
 \hline
@@ -876,11 +874,10 @@ Move the selected piece inside the map (Multi\+Player)
 \hline
 \mbox{\texttt{ in}}  & {\em name} & player\textquotesingle{}s name (the one who is moving the piece) \\
 \hline
-\mbox{\texttt{ out}}  & {\em 0} & if the piece wasn\textquotesingle{}t correctly moved \\
-\hline
-\mbox{\texttt{ out}}  & {\em 1} & if the piece was correctly moved \\
-\hline
 \end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+0\+: if the piece wasn\textquotesingle{}t correctly moved, 1\+: if the piece was correctly moved 
+\end{DoxyReturn}
 \begin{DoxySeeAlso}{See also}
 \mbox{\hyperlink{_logic_8h_a37d6817948e584c4f3fd4a8d72ed3a1d}{update\+Score\+MP2()}} 
 
@@ -912,7 +909,7 @@ intro\+MPDynami\+PC()
 \end{DoxySeeAlso}
 
 
-Definition at line \mbox{\hyperlink{_cut_8h_source_l00874}{874}} of file \mbox{\hyperlink{_cut_8h_source}{Cut.\+h}}.
+Definition at line \mbox{\hyperlink{_cut_8h_source_l00872}{872}} of file \mbox{\hyperlink{_cut_8h_source}{Cut.\+h}}.
 
 \mbox{\Hypertarget{_cut_8h_a31d08c0c40d8f48175b75e48f8412c8b}\label{_cut_8h_a31d08c0c40d8f48175b75e48f8412c8b}} 
 \index{Cut.h@{Cut.h}!selectProcess@{selectProcess}}
@@ -926,17 +923,17 @@ Selects a piece (tetramino), its rotation and updates avaible pieces.
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em avaiblep} & avaible pieces \\
+\mbox{\texttt{ out}}  & {\em avaiblep} & avaible pieces \\
 \hline
 \mbox{\texttt{ in}}  & {\em dim} & avaiblep array\textquotesingle{}s size \\
 \hline
-\mbox{\texttt{ in}}  & {\em selected\+SM} & selected piece \\
+\mbox{\texttt{ out}}  & {\em selected\+SM} & selected piece \\
 \hline
-\mbox{\texttt{ in}}  & {\em rotation} & player\textquotesingle{}s current score \\
+\mbox{\texttt{ out}}  & {\em rotation} & player\textquotesingle{}s current score \\
 \hline
-\mbox{\texttt{ in}}  & {\em drawn} & if piece was drawn or not \\
+\mbox{\texttt{ out}}  & {\em drawn} & if piece was drawn or not \\
 \hline
-\mbox{\texttt{ in}}  & {\em map} & game map \\
+\mbox{\texttt{ out}}  & {\em map} & game map \\
 \hline
 \mbox{\texttt{ in}}  & {\em x} & map x coord. \\
 \hline
@@ -984,17 +981,17 @@ Select randomly a piece (tetramino) and its rotation, then updates avaible piece
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em avaiblep} & avaible pieces \\
+\mbox{\texttt{ out}}  & {\em avaiblep} & avaible pieces \\
 \hline
 \mbox{\texttt{ in}}  & {\em dim} & avaiblep array\textquotesingle{}s size \\
 \hline
-\mbox{\texttt{ in}}  & {\em selected\+SM} & selected piece \\
+\mbox{\texttt{ out}}  & {\em selected\+SM} & selected piece \\
 \hline
-\mbox{\texttt{ in}}  & {\em rotation} & player\textquotesingle{}s current score \\
+\mbox{\texttt{ out}}  & {\em rotation} & player\textquotesingle{}s current score \\
 \hline
-\mbox{\texttt{ in}}  & {\em drawn} & if piece was drawn or not \\
+\mbox{\texttt{ out}}  & {\em drawn} & if piece was drawn or not \\
 \hline
-\mbox{\texttt{ in}}  & {\em map} & game map \\
+\mbox{\texttt{ out}}  & {\em map} & game map \\
 \hline
 \mbox{\texttt{ in}}  & {\em x} & map x coord. \\
 \hline
@@ -1040,7 +1037,7 @@ Prints out the player\textquotesingle{}s name.
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em playerone} & char pointer \\
+\mbox{\texttt{ out}}  & {\em playerone} & char pointer \\
 \hline
 \end{DoxyParams}
 
@@ -1059,7 +1056,7 @@ When a piece could not be drawn, this function stores back the amout (decreased)
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em avaiblep} & avaible pieces \\
+\mbox{\texttt{ out}}  & {\em avaiblep} & avaible pieces \\
 \hline
 \mbox{\texttt{ in}}  & {\em selected\+SM} & selected piece \\
 \hline
