--- a/Doxygen documentation/latex/_logic_8h.tex
+++ b/Doxygen documentation/latex/_logic_8h.tex
@@ -3,38 +3,38 @@
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-int \mbox{\hyperlink{_logic_8h_a1970eaa9e312cd74d102b660684ae60d}{check\+Avaible}} (int $\ast$pieces, int \mbox{\hyperlink{tryhard_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int selected)
-\item 
-int \mbox{\hyperlink{_logic_8h_a8a177e9cdae096c627c34a7af3259f47}{select\+Piece}} (int $\ast$pieces, int \mbox{\hyperlink{tryhard_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, char $\ast$color\+Piece)
-\item 
+int \mbox{\hyperlink{_logic_8h_a1970eaa9e312cd74d102b660684ae60d}{check\+Avaible}} (int $\ast$pieces, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int selected)
+\begin{DoxyCompactList}\small\item\em Checks if the selected piece is avaible. \end{DoxyCompactList}\item 
+int \mbox{\hyperlink{_logic_8h_a8a177e9cdae096c627c34a7af3259f47}{select\+Piece}} (int $\ast$pieces, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, char $\ast$color\+Piece)
+\begin{DoxyCompactList}\small\item\em Prints the options, asks the player to select a piece and updates the avaible pieces and returns the selected piece. \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{_logic_8h_a368eec4ffe984c02c5cf96bf6b6f0add}{select\+Rotation}} (char $\ast$color\+Piece)
-\item 
+\begin{DoxyCompactList}\small\item\em Prints the options, asks the player to select a piece rotation and updates the avaible pieces and returns the selected piece rotation. \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{_logic_8h_a5d22ad5e258a2a031612ffc15d2dd298}{draw\+Selected}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, int selected, int rotation)
-\item 
+\begin{DoxyCompactList}\small\item\em Fills the map with the selected piece adding \textquotesingle{}1\textquotesingle{}. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_logic_8h_aee97c5a4ef026c8650c36bf2ae504e83}{moveback\+Selected}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, int selected, int rotation)
-\item 
+\begin{DoxyCompactList}\small\item\em Fills the map with the selected piece adding \textquotesingle{}0\textquotesingle{}. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_logic_8h_abc84f7c8e631c6f043f9e1229f7fb613}{Fall\+Column}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int j)
-\item 
+\begin{DoxyCompactList}\small\item\em Make the pieces inside the column fall. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_logic_8h_a16612123865a67e5000f9cd48e4f87d3}{Fall\+All}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]})
-\item 
+\begin{DoxyCompactList}\small\item\em Make all pieces inside the map fall. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_logic_8h_a1bcee7c64e802deb14834e81b7b3b93d}{delete\+Row}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int i)
-\item 
+\begin{DoxyCompactList}\small\item\em If there\textquotesingle{}s a row of \textquotesingle{}1\textquotesingle{}, it converts it to \textquotesingle{}0\textquotesingle{}. \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{_logic_8h_abad30d0bfcc0a73c9df01d974f8e8882}{count\+Rows}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]})
-\item 
+\begin{DoxyCompactList}\small\item\em Counts the rows filled with \textquotesingle{}1\textquotesingle{} and, if necessary, deletes them. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_logic_8h_a0260142fa170a80c2fdb27c4a94c4536}{update\+Score\+SM}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int $\ast$score)
-\item 
+\begin{DoxyCompactList}\small\item\em Updates the score, counts the rows and , if necessary, deletes them. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_logic_8h_a324846e6d5e158c401990ebbb9e584c9}{invert\+Enemy}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int invert)
-\item 
+\begin{DoxyCompactList}\small\item\em Inverts the enemy\textquotesingle{}s map. \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{_logic_8h_a37d6817948e584c4f3fd4a8d72ed3a1d}{update\+Score\+MP2}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int $\ast$score)
-\item 
-void \mbox{\hyperlink{_logic_8h_ac993c9fce28666b89ab798f7c7e79c32}{check\+End\+Game}} (int avaiblep\mbox{[}6\mbox{]}, int \mbox{\hyperlink{tryhard_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$won)
-\item 
+\begin{DoxyCompactList}\small\item\em Updates the score in Multi\+Player, counts the rwos and, if necessary, deletes them. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{_logic_8h_ac993c9fce28666b89ab798f7c7e79c32}{check\+End\+Game}} (int avaiblep\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$won)
+\begin{DoxyCompactList}\small\item\em Checks if player/players have run out of pieces. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_logic_8h_a333725dd882aacbc83cb91a13cba04ab}{check\+Win\+MP}} (char name\mbox{[}20\mbox{]}, char name1\mbox{[}20\mbox{]}, int score, int score1)
-\item 
+\begin{DoxyCompactList}\small\item\em Checks who has the bigger score and prints out the winner (1 vs 1) or or draw screen. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{_logic_8h_a7ae65784891006a5afc1c0212ad86a54}{check\+Win\+MPC}} (char name\mbox{[}20\mbox{]}, int score, int score1)
-\item 
+\begin{DoxyCompactList}\small\item\em Checks if player has won or lost and prints out the result (1 vs PC) \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{_logic_8h_afa4b35c44b2a4924a676ddc2aa408f95}{who\+Enemy}} ()
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Shows options and returns how many players will play. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Function Documentation}
@@ -46,7 +46,23 @@ int \mbox{\hyperlink{_logic_8h_afa4b35c44b2a4924a676ddc2aa408f95}{who\+Enemy}} (
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00001}{1}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Checks if the selected piece is avaible. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em pieces} & points to avaible array \\
+\hline
+\mbox{\texttt{ in}}  & {\em dim} & avaible array\textquotesingle{}s size \\
+\hline
+\mbox{\texttt{ in}}  & {\em selected} & selected piece \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+1\+: if it is abvaible, 0\+: if it is not avaible 
+\end{DoxyReturn}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00009}{9}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_ac993c9fce28666b89ab798f7c7e79c32}\label{_logic_8h_ac993c9fce28666b89ab798f7c7e79c32}} 
 \index{Logic.h@{Logic.h}!checkEndGame@{checkEndGame}}
@@ -56,7 +72,20 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00001}{1}} of file \mbox{\
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00277}{277}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Checks if player/players have run out of pieces. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em avaiblep} & avaible pieces \\
+\hline
+\mbox{\texttt{ in}}  & {\em dim} & avaible array\textquotesingle{}s size \\
+\hline
+\mbox{\texttt{ out}}  & {\em won} & if pieces are finished or not \\
+\hline
+\end{DoxyParams}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00407}{407}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_a333725dd882aacbc83cb91a13cba04ab}\label{_logic_8h_a333725dd882aacbc83cb91a13cba04ab}} 
 \index{Logic.h@{Logic.h}!checkWinMP@{checkWinMP}}
@@ -66,7 +95,27 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00277}{277}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00290}{290}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Checks who has the bigger score and prints out the winner (1 vs 1) or or draw screen. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em name} & player1 name \\
+\hline
+\mbox{\texttt{ in}}  & {\em name1} & player2 name \\
+\hline
+\mbox{\texttt{ in}}  & {\em score} & player1 score \\
+\hline
+\mbox{\texttt{ in}}  & {\em score1} & player2 score \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_print_8h_a1076c28ca965d7ebaa8a26c91488e457}{print\+Winner()}} 
+
+\mbox{\hyperlink{_print_8h_a277aa4d6daf83c78553264a2483b009a}{print\+Pareggio()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00429}{429}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_a7ae65784891006a5afc1c0212ad86a54}\label{_logic_8h_a7ae65784891006a5afc1c0212ad86a54}} 
 \index{Logic.h@{Logic.h}!checkWinMPC@{checkWinMPC}}
@@ -76,7 +125,27 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00290}{290}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00302}{302}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Checks if player has won or lost and prints out the result (1 vs PC) 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em name} & player\textquotesingle{}s name \\
+\hline
+\mbox{\texttt{ in}}  & {\em score} & player\textquotesingle{}s score \\
+\hline
+\mbox{\texttt{ in}}  & {\em score1} & PC \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_print_8h_a1076c28ca965d7ebaa8a26c91488e457}{print\+Winner()}} 
+
+\mbox{\hyperlink{_print_8h_a9fbc1f7e744174b1dab9de2a2a923803}{print\+Loser()}} 
+
+\mbox{\hyperlink{_print_8h_a277aa4d6daf83c78553264a2483b009a}{print\+Pareggio()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00450}{450}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_abad30d0bfcc0a73c9df01d974f8e8882}\label{_logic_8h_abad30d0bfcc0a73c9df01d974f8e8882}} 
 \index{Logic.h@{Logic.h}!countRows@{countRows}}
@@ -86,7 +155,22 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00302}{302}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00186}{186}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Counts the rows filled with \textquotesingle{}1\textquotesingle{} and, if necessary, deletes them. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ out}}  & {\em map} & game map \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+count\+: number of rows filled with \textquotesingle{}1\textquotesingle{} 
+\end{DoxyReturn}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_logic_8h_a1bcee7c64e802deb14834e81b7b3b93d}{delete\+Row()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00289}{289}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_a1bcee7c64e802deb14834e81b7b3b93d}\label{_logic_8h_a1bcee7c64e802deb14834e81b7b3b93d}} 
 \index{Logic.h@{Logic.h}!deleteRow@{deleteRow}}
@@ -96,7 +180,18 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00186}{186}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00175}{175}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+If there\textquotesingle{}s a row of \textquotesingle{}1\textquotesingle{}, it converts it to \textquotesingle{}0\textquotesingle{}. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ out}}  & {\em map} & game map \\
+\hline
+\mbox{\texttt{ in}}  & {\em i} & map row \\
+\hline
+\end{DoxyParams}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00272}{272}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_a5d22ad5e258a2a031612ffc15d2dd298}\label{_logic_8h_a5d22ad5e258a2a031612ffc15d2dd298}} 
 \index{Logic.h@{Logic.h}!drawSelected@{drawSelected}}
@@ -106,7 +201,66 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00175}{175}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00033}{33}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Fills the map with the selected piece adding \textquotesingle{}1\textquotesingle{}. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ out}}  & {\em map} & game map \\
+\hline
+\mbox{\texttt{ in}}  & {\em x} & map x coord. \\
+\hline
+\mbox{\texttt{ in}}  & {\em y} & map y coord. \\
+\hline
+\mbox{\texttt{ in}}  & {\em selected} & selected piece \\
+\hline
+\mbox{\texttt{ in}}  & {\em rotation} & piece rotation \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+drawn\+: if the piece was put inside the map or not 
+\end{DoxyReturn}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_draw_pieces_8h_aa3b575340bab8f3bec25b8776faadb6e}{drawT}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a805a433c4b2d7b6fdf72b7a19e625740}{draw\+T1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a3ff0916b18bf28f7a3ecb6aa9f0ac9e5}{draw\+T2}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ab4e33293ecaad87886da645fceacb5c7}{draw\+T3}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a41d0e649c136de7512dd63649b48a323}{drawZ}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ae9c8aae39834ed2147cc508fbd65d6f5}{draw\+Z1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a3c6a275e0b3bec11b9e66eac47c6816f}{draw\+Z2}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a03e667be37f44af9ea5c05e1ebd6c2a9}{draw\+Z3}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a99e0c040ad6c9cf5007a873ceff4e390}{drawI}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ae2b07a02fd9fdb6f8ff7907736f0de89}{draw\+I1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ab230773ef3eb81dcdc7e9f531a43488a}{drawL}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a0fce015e695a1e8cd4a5cc534fdafc7a}{draw\+L1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ac9456f234576a39da9ba4168e41c20bb}{draw\+L2}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a266c5f3c4f76c89bc9bd1e543b88705c}{draw\+L3}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a8f2ed46cd55891a5926377152188b8ab}{draw\+Lr}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ada5d4f3503c3b5b06611e6a920d9e3e1}{draw\+Lr1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_aaf5822c80dd59f4bf05ec11eb017f952}{draw\+Lr2}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a2b3aa20da9bd5814a92c84337836e003}{draw\+Lr3}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a1f0f37fcbe16c992da82419f30c529e6}{drawO}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00088}{88}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_a16612123865a67e5000f9cd48e4f87d3}\label{_logic_8h_a16612123865a67e5000f9cd48e4f87d3}} 
 \index{Logic.h@{Logic.h}!FallAll@{FallAll}}
@@ -116,7 +270,19 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00033}{33}} of file \mbox{
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00168}{168}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Make all pieces inside the map fall. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ out}}  & {\em map} & game map \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_logic_8h_abc84f7c8e631c6f043f9e1229f7fb613}{Fall\+Column()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00260}{260}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_abc84f7c8e631c6f043f9e1229f7fb613}\label{_logic_8h_abc84f7c8e631c6f043f9e1229f7fb613}} 
 \index{Logic.h@{Logic.h}!FallColumn@{FallColumn}}
@@ -126,7 +292,18 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00168}{168}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00152}{152}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Make the pieces inside the column fall. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ out}}  & {\em map} & game map \\
+\hline
+\mbox{\texttt{ in}}  & {\em j} & map columnn \\
+\hline
+\end{DoxyParams}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00239}{239}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_a324846e6d5e158c401990ebbb9e584c9}\label{_logic_8h_a324846e6d5e158c401990ebbb9e584c9}} 
 \index{Logic.h@{Logic.h}!invertEnemy@{invertEnemy}}
@@ -136,7 +313,18 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00152}{152}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00234}{234}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Inverts the enemy\textquotesingle{}s map. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ out}}  & {\em map} & enemy\textquotesingle{}s map \\
+\hline
+\mbox{\texttt{ in}}  & {\em invert} & from which row we need to convert \\
+\hline
+\end{DoxyParams}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00349}{349}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_aee97c5a4ef026c8650c36bf2ae504e83}\label{_logic_8h_aee97c5a4ef026c8650c36bf2ae504e83}} 
 \index{Logic.h@{Logic.h}!movebackSelected@{movebackSelected}}
@@ -146,7 +334,63 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00234}{234}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00091}{91}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Fills the map with the selected piece adding \textquotesingle{}0\textquotesingle{}. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ out}}  & {\em map} & game map \\
+\hline
+\mbox{\texttt{ in}}  & {\em x} & map x coord. \\
+\hline
+\mbox{\texttt{ in}}  & {\em y} & map y coord. \\
+\hline
+\mbox{\texttt{ in}}  & {\em selected} & selected piece \\
+\hline
+\mbox{\texttt{ in}}  & {\em rotation} & piece rotation \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_draw_pieces_8h_a7873ccc05b022e6ee34014fc65ed62b1}{deleteT}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_aaec55de9c547471029b8edcf3c325b7e}{delete\+T1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a0b89de0f248b56b5d459de50378c6900}{delete\+T2}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_accad6a71a2ab14740aa0b36c9e519f00}{delete\+T3}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a1cb0b93818f173c24b276a05367f6c48}{deleteZ}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_aeb8338f46c3992a3c59f2c95166edc4a}{delete\+Z1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a9091baa61b82443e77e491a8b2d45b5d}{delete\+Z2}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ae590977bbcf68de98b9cf1f317b5b426}{delete\+Z3}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_aa388bfa13edf3ac7e6470d57af861936}{deleteI}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_aa388bfa13edf3ac7e6470d57af861936}{deleteI}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a4f28b388bdfdebc99fd609a9d62a1509}{deleteL}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a04ab594cb4d1fe677142a2b599c15d8a}{delete\+L1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a088b93825f77815e1308a8bd188dc97b}{delete\+L2}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a088b93825f77815e1308a8bd188dc97b}{delete\+L2}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a3f7a48f0fe5c94ac6ad92bf2cdc8ed9a}{delete\+Lr}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a7c02220296b3d6f7be60d1e33a77b5d6}{delete\+Lr1}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_ab850ab153cbaddd8e4e79e480dd4dde1}{delete\+Lr2}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_adf887b48c8f09041a388673057eaeac1}{delete\+Lr3}} 
+
+\mbox{\hyperlink{_draw_pieces_8h_a5a44fc57ffb4aa81cd29e755e532010b}{deleteO}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00173}{173}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_a8a177e9cdae096c627c34a7af3259f47}\label{_logic_8h_a8a177e9cdae096c627c34a7af3259f47}} 
 \index{Logic.h@{Logic.h}!selectPiece@{selectPiece}}
@@ -156,7 +400,30 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00091}{91}} of file \mbox{
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00008}{8}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Prints the options, asks the player to select a piece and updates the avaible pieces and returns the selected piece. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ out}}  & {\em pieces} & points to avaible array \\
+\hline
+\mbox{\texttt{ in}}  & {\em dim} & avaible array\textquotesingle{}s size \\
+\hline
+\mbox{\texttt{ in}}  & {\em color\+Piece} & piece color \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+selected\+: piece which the user has selected 
+\end{DoxyReturn}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+
+\mbox{\hyperlink{_extra_8h_acd245ad1ccba04eebd92376ea44cb41d}{clean\+\_\+stdin()}} 
+
+\mbox{\hyperlink{_logic_8h_a1970eaa9e312cd74d102b660684ae60d}{check\+Avaible()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00027}{27}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_a368eec4ffe984c02c5cf96bf6b6f0add}\label{_logic_8h_a368eec4ffe984c02c5cf96bf6b6f0add}} 
 \index{Logic.h@{Logic.h}!selectRotation@{selectRotation}}
@@ -166,7 +433,24 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00008}{8}} of file \mbox{\
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00022}{22}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Prints the options, asks the player to select a piece rotation and updates the avaible pieces and returns the selected piece rotation. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ in}}  & {\em color\+Piece} & piece color \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+r\+: piece rotation 
+\end{DoxyReturn}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
+
+\mbox{\hyperlink{_extra_8h_acd245ad1ccba04eebd92376ea44cb41d}{clean\+\_\+stdin()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00049}{49}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_a37d6817948e584c4f3fd4a8d72ed3a1d}\label{_logic_8h_a37d6817948e584c4f3fd4a8d72ed3a1d}} 
 \index{Logic.h@{Logic.h}!updateScoreMP2@{updateScoreMP2}}
@@ -176,7 +460,26 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00022}{22}} of file \mbox{
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00248}{248}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Updates the score in Multi\+Player, counts the rwos and, if necessary, deletes them. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ out}}  & {\em map} & game map \\
+\hline
+\mbox{\texttt{ out}}  & {\em score} & current score \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+cout\+: number of rows filled with \textquotesingle{}1\textquotesingle{} 
+\end{DoxyReturn}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_logic_8h_abad30d0bfcc0a73c9df01d974f8e8882}{count\+Rows()}} 
+
+\mbox{\hyperlink{_logic_8h_a16612123865a67e5000f9cd48e4f87d3}{Fall\+All()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00372}{372}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_a0260142fa170a80c2fdb27c4a94c4536}\label{_logic_8h_a0260142fa170a80c2fdb27c4a94c4536}} 
 \index{Logic.h@{Logic.h}!updateScoreSM@{updateScoreSM}}
@@ -186,7 +489,23 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00248}{248}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00210}{210}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Updates the score, counts the rows and , if necessary, deletes them. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{ out}}  & {\em map} & game map \\
+\hline
+\mbox{\texttt{ out}}  & {\em score} & current score \\
+\hline
+\end{DoxyParams}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_logic_8h_abad30d0bfcc0a73c9df01d974f8e8882}{count\+Rows()}} 
+
+\mbox{\hyperlink{_logic_8h_a16612123865a67e5000f9cd48e4f87d3}{Fall\+All()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00320}{320}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
 \mbox{\Hypertarget{_logic_8h_afa4b35c44b2a4924a676ddc2aa408f95}\label{_logic_8h_afa4b35c44b2a4924a676ddc2aa408f95}} 
 \index{Logic.h@{Logic.h}!whoEnemy@{whoEnemy}}
@@ -196,5 +515,15 @@ Definition at line \mbox{\hyperlink{_logic_8h_source_l00210}{210}} of file \mbox
 
 
 
-Definition at line \mbox{\hyperlink{_logic_8h_source_l00314}{314}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
+Shows options and returns how many players will play. 
+
+\begin{DoxyReturn}{Returns}
+p\+: 0 back Main Menu, 1\+: 1 vs PC, 2\+: 1 vs 1 
+\end{DoxyReturn}
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{_extra_8h_acd245ad1ccba04eebd92376ea44cb41d}{clean\+\_\+stdin()}} 
+\end{DoxySeeAlso}
+
+
+Definition at line \mbox{\hyperlink{_logic_8h_source_l00467}{467}} of file \mbox{\hyperlink{_logic_8h_source}{Logic.\+h}}.
 
