--- a/Doxygen documentation/latex/files.tex
+++ b/Doxygen documentation/latex/files.tex
@@ -5,8 +5,7 @@ Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{_extra_8h}{Extra.\+h}} }{\pageref{_extra_8h}}{}
 \item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{_initializer_8h}{Initializer.\+h}} }{\pageref{_initializer_8h}}{}
 \item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{_logic_8h}{Logic.\+h}} }{\pageref{_logic_8h}}{}
+\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{main_8c}{main.\+c}} }{\pageref{main_8c}}{}
 \item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{_print_8h}{Print.\+h}} }{\pageref{_print_8h}}{}
 \item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{_text_settings_8h}{Text\+Settings.\+h}} }{\pageref{_text_settings_8h}}{}
-\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{trash_8c}{trash.\+c}} }{\pageref{trash_8c}}{}
-\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{tryhard_8c}{tryhard.\+c}} }{\pageref{tryhard_8c}}{}
 \end{DoxyCompactList}
